[feat] Apply all-contributors template

--- a/.gitignore
+++ b/.gitignore
@@ -71,3 +71,6 @@ Platform/Mono/Dictionaries/*.xml.gz
 # Documentation generation
 /Documentation/log.txt
 /Documentation/**/_site/
+
+# node_modules
+node_modules
